fix width issue on with checkmarks text wrapping

--- a/src/applications/edu-benefits/sass/edu-benefits.scss
+++ b/src/applications/edu-benefits/sass/edu-benefits.scss
@@ -165,27 +165,34 @@
   }
 }
 
-.stem-eligibility {
-  background-color: #f1f1f1;
-  padding: 0.5em 1em;
+.stem-eligibility-page {
+  max-width: 100%;
+  width: 100%;
 
-  ul {
-    margin-left: 1.5em;
-    li {
-      margin-bottom: 0;
+  .stem-eligibility {
+    background-color: #f1f1f1;
+    padding: 0.5em 1em;
+
+    ul {
+      margin-left: 1.5em;
+
+      li {
+        margin-bottom: 0;
+      }
     }
+
+    .explore-other-benefits {
+      padding-top: 1em;
+    }
+
+    .explore-other-benefits-button {
+      padding-top: 1em;
+    }
+
   }
 
-  .explore-other-benefits {
-    padding-top: 1em;
+  .stem-eligibility-continue-application {
+    padding-top: 2em;
   }
-
-  .explore-other-benefits-button {
-    padding-top: 1em;
-  }
-
 }
 
-.stem-eligibility-continue-application {
-  padding-top: 2em;
-}
